# private-fdi-detection-experiments

./: .gitignore  CMakeLists.txt  bench.py  bench.sh  bench_native.sh  bench_sgx.sh  build_native.sh  build_sgx.sh  cleanup.sh  launch.sh  main.cpp  main.py  results.md  smart_grid_server.manifest.template
client/: aes_manager.py  device.py  logger.py  main.py  simulator.py
common/: protocol.hpp
server/: aes_manager.cpp  aes_manager.hpp  logger.cpp  logger.hpp  main.cpp  power_processor.cpp  power_processor.hpp  server.cpp  server.hpp  thread_pool.cpp  thread_pool.hpp
server_sgx/: main.cpp
